--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -10,35 +10,43 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="12">
-
+        <TextView
+            android:id="@+id/txt_exercise"
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_weight="1"
+            android:layout_centerInParent="true"
+            android:background="@drawable/bg_btn"
+            android:padding="10dp"
+            android:text="Add or edit exercises"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="35dp"
+            android:textStyle="bold" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="9"
+            android:padding="20dp">
+            <ListView
+                android:id="@+id/lv_elist"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-            <TextView
-                android:id="@+id/txt_exercise"
-                android:layout_width="500dp"
+            <Button
+                android:id="@+id/btn_add"
+                android:layout_width="50dp"
                 android:layout_height="200dp"
                 android:layout_centerInParent="true"
-                android:background="@drawable/bg_btn"
-                android:padding="10dp"
-                android:text="Exercise"
+                android:text="+"
                 android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="35dp"
+                android:textSize="25dp"
                 android:textStyle="bold" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="5.5"
-            android:padding="20dp">
-
-            <ListView
-                android:id="@+id/lv_elist"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_centerInParent="true" />
         </RelativeLayout>
 
     </LinearLayout>
