--- a/app/src/main/res/layout/fragment_edit_exercise.xml
+++ b/app/src/main/res/layout/fragment_edit_exercise.xml
@@ -48,16 +48,15 @@
                     android:autoSizeMinTextSize="12dp"
                     android:autoSizeMaxTextSize="100dp"
                     android:autoSizeStepGranularity="2sp"
-                    android:text="Name:"
+                    android:text="Name: "
                     android:autoSizeTextType="uniform"
                     android:textSize="20dp" />
-                <EditText
+                <TextView
                     android:id="@+id/e_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLength="20"
                     android:hint=" Exercise"
-                    android:gravity="center"
                     android:inputType="text"
                     android:textSize="20dp" />
             </LinearLayout>
@@ -183,6 +182,4 @@
             android:textSize="20sp"
             />
     </LinearLayout>
-
-
 </RelativeLayout>
