--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -18,10 +18,10 @@
             android:layout_centerInParent="true"
             android:background="@drawable/bg_btn"
             android:padding="10dp"
-            android:text="Add or edit exercises"
+            android:text="Add/Edit/Delete exercises"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="35dp"
+            android:textSize="30dp"
             android:textStyle="bold" />
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -46,6 +46,19 @@
                 android:text="+"
                 android:textAlignment="center"
                 android:textSize="25dp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                android:text="1) Tap '+' to add exercise\n2) Tap exercise to edit\n3) Long press exercise to delete"
+                android:textAlignment="center"
+                android:textSize="10dp"
                 android:textStyle="bold" />
         </RelativeLayout>
 
