--- a/app/src/main/res/layout/fragment_view_exercise.xml
+++ b/app/src/main/res/layout/fragment_view_exercise.xml
@@ -10,7 +10,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="12">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -22,7 +21,7 @@
                 android:layout_centerInParent="true"
                 android:background="@drawable/bg_btn"
                 android:padding="10dp"
-                android:text="Update values for exercise"
+                android:text="Exercise information"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="25dp"
@@ -75,15 +74,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Reps:"
+                    android:text="Reps: "
                     android:textSize="20dp" />
-                <EditText
+                <TextView
                     android:id="@+id/reps"
                     android:layout_width="45dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
-                    android:hint=" 20"
+                    android:text=" 20"
                     android:inputType="numberDecimal"
                     android:textSize="20dp" />
             </LinearLayout>
@@ -101,14 +99,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Sets:"
+                    android:text="Sets: "
                     android:textSize="20dp" />
-                <EditText
+                <TextView
                     android:id="@+id/sets"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:hint=" 3"
+                    android:text=" 3"
                     android:inputType="numberDecimal"
                     android:textSize="20dp" />
             </LinearLayout>
@@ -126,14 +123,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Weight:"
+                    android:text="Weight: "
                     android:textSize="20dp" />
-                <EditText
+                <TextView
                     android:id="@+id/weight"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:hint=" Weight?"
+                    android:text=" Weight?"
                     android:inputType="numberDecimal"
                     android:textSize="20dp" />
             </LinearLayout>
@@ -151,35 +147,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Notes:"
+                    android:text="Notes: "
                     android:textSize="20dp" />
-                <EditText
+                <TextView
                     android:id="@+id/notes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:hint="Notes on form?"
                     android:inputType="text"
                     android:textSize="20dp" />
             </LinearLayout>
         </RelativeLayout>
-        <View
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-        <Button
-            android:id="@+id/btn_commit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Update Exercise in workout"
-            android:textSize="20sp"
-            />
-        <Button
-            android:id="@+id/btn_cancel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:textSize="20sp"
-            />
     </LinearLayout>
 </RelativeLayout>
