--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -26,7 +26,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="9"
+            android:layout_weight="9.5"
             android:padding="20dp">
             <ListView
                 android:id="@+id/lv_elist"
@@ -39,13 +39,26 @@
             android:layout_height="0dp"
             android:layout_weight="1">
             <Button
-                android:id="@+id/btn_cancel"
+                android:id="@+id/btn_end"
                 android:layout_width="300dp"
                 android:layout_height="100dp"
                 android:layout_centerInParent="true"
-                android:text="Cancel"
+                android:text="End Workout"
                 android:textAlignment="center"
                 android:textSize="20dp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".5">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                android:text="1) Tap exercise to view details\n2) Hold exercise to delete\"
+                android:textAlignment="center"
+                android:textSize="10dp"
                 android:textStyle="bold" />
         </RelativeLayout>
 
