--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,8 +11,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:text="(Flat2Fit) FitXForever"
+        android:layout_weight="3"
+        android:text="Fitness\nX\nForever"
+        android:textStyle="bold"
+        android:fontFamily="times"
+        android:textColor="@color/black"
+        android:outlineAmbientShadowColor="@color/white"
         android:textSize="50dp"
         android:textScaleX="1.2"
         android:textAlignment="center"
